EFASS-75: fix: update button colors to be consistent, update badge colors to work with dark mode, update dashboard to not show image if city admin is viewing

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -85,8 +85,8 @@
     --card-foreground: oklch(0.985 0.001 106.423);
     --popover: oklch(0.216 0.006 56.043);
     --popover-foreground: oklch(0.985 0.001 106.423);
-    --primary: oklch(0.923 0.003 48.717);
-    --primary-foreground: oklch(0.216 0.006 56.043);
+    --primary: oklch(0.488 0.243 264.376);
+    --primary-foreground: oklch(0.985 0.001 106.423);
     --secondary: oklch(0.268 0.007 34.298);
     --secondary-foreground: oklch(0.985 0.001 106.423);
     --muted: oklch(0.268 0.007 34.298);
